# robit

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  ROADMAP.md  demo.py  mkdocs.yml  readme.md  requirements.txt  run_coverage.py  setup.cfg  setup.py
.github/workflows/: main.yml  publish_pypi_package.yml  python-publish.yml  run_tests.yml  testing.yml
docs/: index.md
docs/changelog/: archived_changelog.md  changelog.md
docs/getting_started/: installation.md
docs/roadmap/: roadmap.md
examples/: demo.py  monitor_example.py  worker_example.py
robit/: __init__.py  agenda.py  alert.py  clock.py  config.py  group.py  health.py  id.py  job.py  log.py  name.py  part.py  robit.py  shortcuts.py  status.py  timer.py  web.py  worker.py
robit/core/: alert.py  clock.py  counter.py  cron.py  cron_wes.py  health.py  id.py  log.py  name.py  status.py  timer.py  utils.py  web_client.py  web_server.py
robit/cron/: cron.py  enums.py  fields.py  utils.py
robit/db/: sqlite.py  table.py  utils.py
robit/html/: core.js  index.css  monitor.html  monitor.js  monitor_index.css  monitor_index.html  monitor_index.js  monitor_old.html  petite_vue.js  worker.html  worker.js  worker_index.css  worker_index.html  worker_index.js
robit/job/: __init__.py  enums.py  group.py  info.py  job.py  tables.py
robit/monitor/: monitor.py  web_server.py
robit/socket/: socket.py
robit/status/: __init__.py  enums.py  status.py
robit/test/: test_clock.py  test_cron.py  test_cron_wes.py  test_robit.py
robit/timer/: __init__.py  decorators.py  (+1 more)
tests/: test_db.py  test_shortcuts.py
(+41 files in other folders)
