[metadata]
name = robit
version = 0.1.6
author = Nathan Johnson
author_email = nathanj@stratusadv.com
description = Service Worker Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/stratusadv/robit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires = >=3.6